Calculated number of cells and spots for mutants at cipro 30ng/mL

--- a/Notebooks/Mutants/RecB_spots.ipynb
+++ b/Notebooks/Mutants/RecB_spots.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +119,30 @@
     "display(data\n",
     "        .Bacteria_large\n",
     "        .query('Frame == 0')\n",
+    "        .agg({'Indices':'count'})\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    32427\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data\n",
+    "        .Bacteria_large\n",
+    "        .query('(Frame == 0) and (Cipro == \"30 ng/ml\")')\n",
     "        .agg({'Indices':'count'})\n",
     "        )"
    ]
@@ -163,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,6 +204,30 @@
    "source": [
     "display(data\n",
     "        .RecB_spots\n",
+    "        .agg({'Indices':'count'})\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    116763\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data\n",
+    "        .RecB_spots\n",
+    "        .query('Cipro == \"30 ng/ml\"')\n",
     "        .agg({'Indices':'count'})\n",
     "        )"
    ]
