--- a/Results.tex
+++ b/Results.tex
@@ -37,7 +37,7 @@ Since the duration of the RecB-DSB interaction was unaffected by the amount of D
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.48\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
-    \caption{RecB binding to DSBs. \textbf{(A)} Lifetime of DSB-bound RecB in wild-type (WT) cells, and in the \dreca\ and \geneteneighty\ mutants. Statistically significant differences are shown relative to wild-type cells exposed to 30 ng/ml ciprofloxacin. \ncells{}. \nspots{}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. Statistically significant differences are shown relative to the no ciprofloxacin condition. \ncells{66,764}. \nspots{170,138}. \textbf{(C)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. \ncells{55,843}. \nspots{175,600}. For all panels, violin plots show single-cell distributions, box plots show the median and interquartile range. p-values from a Mann-Whitney test are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001}
+    \caption{RecB binding to DSBs. \textbf{(A)} Lifetime of DSB-bound RecB in wild-type (WT) cells, and in the \dreca\ and \geneteneighty\ mutants. Statistically significant differences are shown relative to wild-type cells exposed to 30 ng/ml ciprofloxacin. \ncells{32,427}. \nspots{116,763}. \textbf{(B)} Recruitment rate of RecB to DSBs per cell at different ciprofloxacin concentrations. Statistically significant differences are shown relative to the no ciprofloxacin condition. \ncells{66,764}. \nspots{170,138}. \textbf{(C)} Recruitment rate of RecB to DSBs per cell for the \dreca\ and \geneteneighty\ mutants. \ncells{55,843}. \nspots{175,600}. For all panels, violin plots show single-cell distributions, box plots show the median and interquartile range. p-values from a Mann-Whitney test are shown as follows: ns, non-significant; *, p<0.05; **, p<0.01; ***, p<0.001; ****, p<0.0001}
     \label{Fig:recruitment}
 \end{figure}
 
